# Yet-Another-2048

./: CMakeLists.txt  README  SDLfunctions.h  functions.h  main.c
